--- a/views/admin/addProduct.ejs
+++ b/views/admin/addProduct.ejs
@@ -33,7 +33,7 @@
       </div>
       <div class="form-group">
         <label for="image">Image:</label>
-        <input type="file" class="form-control-file" id="image" name="image" multiple required>
+        <input type="file" class="form-control-file" id="image" name="images" accept="image/*" multiple required>
       </div>
       <button type="submit" class="btn btn-primary">Submit</button>
     </form>
