Added product update

--- a/views/admin/adminHead.ejs
+++ b/views/admin/adminHead.ejs
@@ -5,6 +5,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Vintagerags-admin</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@10">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
   <link rel="shortcut icon" type="image/png" href="../../static/admin/images/logos/favicon.png" />
   <link rel="stylesheet" href="../../static/admin/css/styles.min.css" />
 </head>
