--- a/views/admin/updateProduct.ejs
+++ b/views/admin/updateProduct.ejs
@@ -3,38 +3,50 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Edit Product</title>
+  <title>Add Product</title>
   <!-- Bootstrap CSS -->
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-  <div class="main-panel">
-         
-    <div class="container form-container">
-        <h1 class="mb-4">Update product Images</h1>
+  <div class="container mt-5">
+    <h2>Add Product</h2>
+    <form action="/admin/updateProduct/<%= product._id %>" method="POST" enctype="application/x-www-form-urlencoded">
+      <div class="form-group">
+        <label for="name">Name:</label>
+        <input type="text" class="form-control" id="name" name="name" value="<%=product.name%>" required>
+      </div>
+      <div class="form-group">
+        <label for="category">Category:</label>
+        <input type="text" class="form-control" id="category" name="category" value="<%=product.category%>" required>
+      </div>
+      <div class="form-group">
+        <label for="description">Description:</label>
+        <textarea class="form-control" id="description" name="description"  required><%=product.description%></textarea>
+      </div>
+      <div class="form-group">
+        <label for="price">Price:</label>
+        <input type="number" class="form-control" id="price" name="price" min="0" value="<%=product.price%>" required>
+      </div>
+      <div class="form-group">
+        <label for="stock">Stock:</label>
+        <input type="number" class="form-control" id="stock" name="stock" min="0" value="<%=product.stock%>" required>
+      </div>
+      <div class="mb-3">
+        <label for="description" class="form-label">Images:</label>
+        <% product.image.forEach(item=>{ %>
+          <img style=" width: 100px;height: 100px;" src="/<%= item %>">
+          <% }) %>
 
-        <form action="/admin/updateimg/<%= product._id %>" method="post" enctype="multipart/form-data">
-            <% product.image.forEach(item=>{ %>
-                <img style=" width: 100px;height: 100px;"src="/<%= item %>">
-                 <a href="/admin/deleteimg?pid=<%= product._id %>&filename=<%= item %>" class="btn btn-danger btn-xs">Delete</a>
-               
-                 <a href="/admin/resizeimg?pid=<%= product._id %>&filename=<%= item %>" class="btn btn-primary btn-xs">Resize</a>
-                 <% }) %>
-                 <div class="mb-3">
-                    <label for="images" class="form-label">Add New Images:</label>
-                    <input type="file" class="form-control" id="images" name="images" accept="image/*" multiple style="width: 20%;">
-                </div>
-            <button type="submit" class="btn btn-primary">Save Image</button>
-          </form>
-    </div>
-  
-
-
- 
-</div>
+      </div>
+      <a href="/admin/editImage/<%= product._id %>" class="btn btn-danger btn-xs">Edit Images</a>
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+  </div>
   <!-- Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
 </body>
 </html>
+
