--- a/views/admin/users.ejs
+++ b/views/admin/users.ejs
@@ -50,7 +50,7 @@
                             </tbody>
                         </table>
                         <% } else { %>
-                            <h1 class="text-center text-secondary mt-5">No Product found in the database</h1>
+                            <h1 class="text-center text-secondary mt-5">No Users found in the database</h1>
                             <% } %>
                 </div>
             </div>
