--- a/views/admin/adminHead.ejs
+++ b/views/admin/adminHead.ejs
@@ -20,7 +20,7 @@
       <!-- Sidebar scroll-->
       <div>
         <div class="brand-logo d-flex align-items-center justify-content-between">
-            <a href="/admin/adminPanel" class="js-logo-clone" style="font-size: 37px;">VintageRags</a>
+          <a href="/admin/adminPanel" class="js-logo-clone" style="font-size: 37px;">VintageRags</a>
           <div class="close-btn d-xl-none d-block sidebartoggler cursor-pointer" id="sidebarCollapse">
             <i class="ti ti-x fs-8"></i>
           </div>
@@ -111,12 +111,13 @@
               </a>
             </li>
           </ul>
-           <div class="navbar-collapse justify-content-end px-0" id="navbarNav">
+          <div class="navbar-collapse justify-content-end px-0" id="navbarNav">
             <ul class="navbar-nav flex-row ms-auto align-items-center justify-content-end">
-               <li class="nav-item dropdown">
+              <li class="nav-item dropdown">
                 <a class="nav-link nav-icon-hover" href="javascript:void(0)" id="drop2" data-bs-toggle="dropdown"
                   aria-expanded="false">
-                  <img src="../../static/admin/images/profile/user-1.jpg" alt="" width="35" height="35" class="rounded-circle">
+                  <img src="../../static/admin/images/profile/user-1.jpg" alt="" width="35" height="35"
+                    class="rounded-circle">
                 </a>
                 <div class="dropdown-menu dropdown-menu-end dropdown-menu-animate-up" aria-labelledby="drop2">
                   <div class="message-body">
@@ -125,7 +126,6 @@
                 </div>
               </li>
             </ul>
-          </div>  
+          </div>
         </nav>
       </header>
-      
