--- a/views/admin/adLogin.ejs
+++ b/views/admin/adLogin.ejs
@@ -20,24 +20,30 @@
           <div class="col-md-8 col-lg-6 col-xxl-3">
             <div class="card mb-0">
               <div class="card-body">
-                <a  class="js-logo-clone" style="font-size: 32px;display:flex;justify-content:  center;margin-top: -20px;">VintageRags</a>
+                <a class="js-logo-clone"
+                  style="font-size: 32px;display:flex;justify-content:  center;margin-top: -20px;">VintageRags</a>
                 <p style="display: flex;justify-content: center;font-size: large;">Admin Login</p>
-                <form class="loginForm" action="/admin/adminlogin" method="post" onsubmit="return validateEmail() && validatePassword()">
+                <form class="loginForm" action="/admin/adminlogin" method="post"
+                  onsubmit="return validateEmail() && validatePassword()">
                   <div class="mb-3">
                     <label for="exampleInputEmail1" class="form-label" for="email">Email Address</label>
-                    <input type="email" class="form-control" id="email" aria-describedby="emailHelp" name="email" onkeyup="validateEmail()" required>
+                    <input type="email" class="form-control" id="email" aria-describedby="emailHelp" name="email"
+                      onkeyup="validateEmail()" required>
                     <span id="emailerror"></span>
                   </div>
                   <div class="mb-4">
                     <label for="exampleInputPassword1" class="form-label" for="password">Password</label>
-                    <input type="password" class="form-control" id="password" name="password" onkeyup="validatePassword()" required>
+                    <input type="password" class="form-control" id="password" name="password"
+                      onkeyup="validatePassword()" required>
                     <span id="passwordError"></span>
                   </div>
                   <button type="submit" class="btn btn-primary w-100 py-8 fs-4 mb-4 rounded-2">Login</button>
                   <% if(passwordError){ %>
-                    <div class="alter text-danger text-start"><%= passwordError %></div>
-                <% } %>
-                
+                    <div class="alter text-danger text-start">
+                      <%= passwordError %>
+                    </div>
+                    <% } %>
+
                 </form>
               </div>
             </div>
@@ -48,32 +54,32 @@
   </div>
   <script>
     function validateEmail() {
-        var emailError = document.getElementById('emailerror');
-        var email = document.getElementById('email').value;
-        if (!email.match(/^[A-Za-z\._\-[0-9]+@[A-Za-z]+\.[a-z]{2,}$/)) {
-            emailError.innerHTML = 'Email is invalid'
-            return false;
-        } else {
-            emailError.innerHTML = ''
-            return true;
-        }
-  
+      var emailError = document.getElementById('emailerror');
+      var email = document.getElementById('email').value;
+      if (!email.match(/^[A-Za-z\._\-[0-9]+@[A-Za-z]+\.[a-z]{2,}$/)) {
+        emailError.innerHTML = 'Email is invalid'
+        return false;
+      } else {
+        emailError.innerHTML = ''
+        return true;
+      }
+
     }
     function validatePassword() {
-        var passwordError = document.getElementById('passwordError');
-        var password = document.getElementById('password').value;
-  
-        if (!password.match(/^(?=.*[A-Za-z])(?=.*\d)(?=.*[!@#$%^&*()-_+=<>?])[A-Za-z\d\S]{8,}$/)) {
-            passwordError.innerHTML = 'Password must meet the following criteria:<br>' +
-                '- At least 8 characters in length<br>' +
-                '- At least one letter (uppercase or lowercase)<br>' +
-                '- At least one digit<br>' +
-                '- At least one symbol';
-            return false;
-        } else {
-            passwordError.innerHTML = '';
-            return true;
-        }
+      var passwordError = document.getElementById('passwordError');
+      var password = document.getElementById('password').value;
+
+      if (!password.match(/^(?=.*[A-Za-z])(?=.*\d)(?=.*[!@#$%^&*()-_+=<>?])[A-Za-z\d\S]{8,}$/)) {
+        passwordError.innerHTML = 'Password must meet the following criteria:<br>' +
+          '- At least 8 characters in length<br>' +
+          '- At least one letter (uppercase or lowercase)<br>' +
+          '- At least one digit<br>' +
+          '- At least one symbol';
+        return false;
+      } else {
+        passwordError.innerHTML = '';
+        return true;
+      }
     } 
   </script>
   <script src="../../static/admin/libs/jquery/dist/jquery.min.js"></script>
