--- a/views/admin/updateCategory.ejs
+++ b/views/admin/updateCategory.ejs
@@ -19,13 +19,14 @@
       </div>
       <div class="form-group">
         <label for="description">Description:</label>
-        <textarea class="form-control" id="description" name="description" required><%= category.description %></textarea>
+        <textarea class="form-control" id="description" name="description"
+          required><%= category.description %></textarea>
       </div>
       <button type="submit" class="btn btn-primary">Edit Category</button>
     </form>
   </div>
 
-  
+
   <!-- Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
