--- a/views/user/footer.ejs
+++ b/views/user/footer.ejs
@@ -1,133 +1,137 @@
 <footer class="site-footer border-top">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-6 mb-5 mb-lg-0">
-          <div class="row">
-            <div class="col-md-12">
-              <h3 class="footer-heading mb-4">Navigations</h3>
-            </div>
-            <div class="col-md-6 col-lg-4">
-              <ul class="list-unstyled">
-                <li><a href="#">Sell online</a></li>
-                <li><a href="#">Features</a></li>
-                <li><a href="#">Shopping cart</a></li>
-                <li><a href="#">Store builder</a></li>
-              </ul>
-            </div>
-            <div class="col-md-6 col-lg-4">
-              <ul class="list-unstyled">
-                <li><a href="#">Mobile commerce</a></li>
-                <li><a href="#">Dropshipping</a></li>
-                <li><a href="#">Website development</a></li>
-              </ul>
-            </div>
-            <div class="col-md-6 col-lg-4">
-              <ul class="list-unstyled">
-                <li><a href="#">Point of sale</a></li>
-                <li><a href="#">Hardware</a></li>
-                <li><a href="#">Software</a></li>
-              </ul>
-            </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-6 mb-5 mb-lg-0">
+        <div class="row">
+          <div class="col-md-12">
+            <h3 class="footer-heading mb-4">Navigations</h3>
           </div>
-        </div>
-        <div class="col-md-6 col-lg-3 mb-4 mb-lg-0">
-          <h3 class="footer-heading mb-4">Promo</h3>
-          <a href="#" class="block-6">
-            <img src="../static/images/hero_1.jpg" alt="Image placeholder" class="img-fluid rounded mb-4">
-            <h3 class="font-weight-light  mb-0">Finding Your Perfect Shoes</h3>
-            <p>Promo from  nuary 15 &mdash; 25, 2019</p>
-          </a>
-        </div>
-        <div class="col-md-6 col-lg-3">
-          <div class="block-5 mb-5">
-            <h3 class="footer-heading mb-4">Contact Info</h3>
+          <div class="col-md-6 col-lg-4">
             <ul class="list-unstyled">
-              <li class="address">203 Fake St. Mountain View, San Francisco, California, USA</li>
-              <li class="phone"><a href="tel://23923929210">+2 392 3929 210</a></li>
-              <li class="email">emailaddress@domain.com</li>
+              <li><a href="#">Sell online</a></li>
+              <li><a href="#">Features</a></li>
+              <li><a href="#">Shopping cart</a></li>
+              <li><a href="#">Store builder</a></li>
             </ul>
           </div>
-
-          <div class="block-7">
-            <form action="#" method="post">
-              <label for="email_subscribe" class="footer-heading">Subscribe</label>
-              <div class="form-group">
-                <input type="text" class="form-control py-4" id="email_subscribe" placeholder="Email">
-                <input type="submit" class="btn btn-sm btn-primary" value="Send">
-              </div>
-            </form>
+          <div class="col-md-6 col-lg-4">
+            <ul class="list-unstyled">
+              <li><a href="#">Mobile commerce</a></li>
+              <li><a href="#">Dropshipping</a></li>
+              <li><a href="#">Website development</a></li>
+            </ul>
+          </div>
+          <div class="col-md-6 col-lg-4">
+            <ul class="list-unstyled">
+              <li><a href="#">Point of sale</a></li>
+              <li><a href="#">Hardware</a></li>
+              <li><a href="#">Software</a></li>
+            </ul>
           </div>
         </div>
       </div>
-      <div class="row pt-5 mt-5 text-center">
-        <div class="col-md-12">
-          <p>
-          <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-          Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank" class="text-primary">Colorlib</a>
-          <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-          </p>
+      <div class="col-md-6 col-lg-3 mb-4 mb-lg-0">
+        <h3 class="footer-heading mb-4">Promo</h3>
+        <a href="#" class="block-6">
+          <img src="../static/images/hero_1.jpg" alt="Image placeholder" class="img-fluid rounded mb-4">
+          <h3 class="font-weight-light  mb-0">Finding Your Perfect Shoes</h3>
+          <p>Promo from nuary 15 &mdash; 25, 2019</p>
+        </a>
+      </div>
+      <div class="col-md-6 col-lg-3">
+        <div class="block-5 mb-5">
+          <h3 class="footer-heading mb-4">Contact Info</h3>
+          <ul class="list-unstyled">
+            <li class="address">203 Fake St. Mountain View, San Francisco, California, USA</li>
+            <li class="phone"><a href="tel://23923929210">+2 392 3929 210</a></li>
+            <li class="email">emailaddress@domain.com</li>
+          </ul>
         </div>
-        
+
+        <div class="block-7">
+          <form action="#" method="post">
+            <label for="email_subscribe" class="footer-heading">Subscribe</label>
+            <div class="form-group">
+              <input type="text" class="form-control py-4" id="email_subscribe" placeholder="Email">
+              <input type="submit" class="btn btn-sm btn-primary" value="Send">
+            </div>
+          </form>
+        </div>
       </div>
     </div>
-  </footer>
+    <div class="row pt-5 mt-5 text-center">
+      <div class="col-md-12">
+        <p>
+          <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+          Copyright &copy;
+          <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
+          <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i
+            class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank"
+            class="text-primary">Colorlib</a>
+          <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+        </p>
+      </div>
+
+    </div>
+  </div>
+</footer>
 </div>
 <script>
   function validateUsername() {
     var usernameError = document.getElementById('usernameerror');
     var username = document.getElementById('username').value;
     if (!username.match(/^[a-zA-Z0-9]+$/)) {
-        usernameError.innerHTML = 'Username is invalid. It must not contain spaces or special characters.';
-        return false;
+      usernameError.innerHTML = 'Username is invalid. It must not contain spaces or special characters.';
+      return false;
     } else {
-        usernameError.innerHTML = '';
-        return true;
+      usernameError.innerHTML = '';
+      return true;
     }
-}
+  }
 
   function validateNumber() {
     var numberError = document.getElementById('numbererror');
     var number = document.getElementById('phone').value;
     if (!number.match(/^\d{10}$/)) {
-        numberError.innerHTML = 'Number is invalid. It must be 10 digits.';
-        return false;
+      numberError.innerHTML = 'Number is invalid. It must be 10 digits.';
+      return false;
     } else {
-        numberError.innerHTML = '';
-        return true;
+      numberError.innerHTML = '';
+      return true;
     }
-}
+  }
 
   function validateEmail() {
-      var emailError = document.getElementById('emailerror');
-      var email = document.getElementById('email').value;
-      if (!email.match(/^[A-Za-z\._\-[0-9]+@[A-Za-z]+\.[a-z]{2,}$/)) {
-          emailError.innerHTML = 'Email is invalid'
-          return false;
-      } else {
-          emailError.innerHTML = ''
-          return true;
-      }
+    var emailError = document.getElementById('emailerror');
+    var email = document.getElementById('email').value;
+    if (!email.match(/^[A-Za-z\._\-[0-9]+@[A-Za-z]+\.[a-z]{2,}$/)) {
+      emailError.innerHTML = 'Email is invalid'
+      return false;
+    } else {
+      emailError.innerHTML = ''
+      return true;
+    }
 
   }
   function validatePassword() {
-      var passwordError = document.getElementById('passwordError');
-      var password = document.getElementById('password').value;
+    var passwordError = document.getElementById('passwordError');
+    var password = document.getElementById('password').value;
 
-      if (!password.match(/^(?=.*[A-Za-z])(?=.*\d)(?=.*[!@#$%^&*()-_+=<>?])[A-Za-z\d\S]{8,}$/)) {
-          passwordError.innerHTML = 'Password must meet the following criteria:<br>' +
-              '- At least 8 characters in length<br>' +
-              '- At least one letter (uppercase or lowercase)<br>' +
-              '- At least one digit<br>' +
-              '- At least one symbol';
-          return false;
-      } else {
-          passwordError.innerHTML = '';
-          return true;
-      }
+    if (!password.match(/^(?=.*[A-Za-z])(?=.*\d)(?=.*[!@#$%^&*()-_+=<>?])[A-Za-z\d\S]{8,}$/)) {
+      passwordError.innerHTML = 'Password must meet the following criteria:<br>' +
+        '- At least 8 characters in length<br>' +
+        '- At least one letter (uppercase or lowercase)<br>' +
+        '- At least one digit<br>' +
+        '- At least one symbol';
+      return false;
+    } else {
+      passwordError.innerHTML = '';
+      return true;
+    }
   } 
 </script>
 <script>
-  const logout= document.getElementById('logoutMain')
+  const logout = document.getElementById('logoutMain')
 </script>
 <script src="../static/js/jquery-3.3.1.min.js"></script>
 <script src="../static/js/jquery-ui.js"></script>
@@ -138,6 +142,7 @@
 <script src="../static/js/aos.js"></script>
 
 <script src="../static/js/main.js"></script>
-  
+
 </body>
+
 </html>
