--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -1,13 +1,17 @@
-<%- include('header.ejs')  %>
-<div class="account-container">
+<%- include('header.ejs') %>
+  <div class="account-container">
     <header class="account-header">
       <h1>My Account</h1>
     </header>
     <main class="account-main">
       <section class="user-info">
         <h2>User Information</h2>
-        <p><b>USERNAME:</b> <%=name %></p>
-        <p><b>EMAIL:</b> <%=email%></p>
+        <p><b>USERNAME:</b>
+          <%=name %>
+        </p>
+        <p><b>EMAIL:</b>
+          <%=email%>
+        </p>
       </section>
       <nav class="account-nav">
         <ul>
@@ -45,4 +49,4 @@
       </nav>
     </main>
   </div>
-<%- include('footer.ejs')  %>
+  <%- include('footer.ejs') %>
