--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -53,7 +53,7 @@
                                                             <%= row.name %>
                                                         </td>
                                                         <td>
-                                                            <%= row.category %>
+                                                            <%= row.category.name %>
                                                         </td>
                                                         <td>
                                                             <%= row.price %>
