--- a/views/admin/updateCategory.ejs
+++ b/views/admin/updateCategory.ejs
@@ -11,7 +11,7 @@
 
 <body>
   <div class="container mt-5">
-    <h2>Add Category</h2>
+    <h2>Edit Category</h2>
     <form action="/admin/updateCategory/<%= category._id %>" method="POST" enctype="application/x-www-form-urlencoded">
       <div class="form-group">
         <label for="name">Name:</label>
