--- a/views/user/footer.ejs
+++ b/views/user/footer.ejs
@@ -33,8 +33,8 @@
       <div class="col-md-6 col-lg-3 mb-4 mb-lg-0">
         <h3 class="footer-heading mb-4">Promo</h3>
         <a href="#" class="block-6">
-          <img src="../static/images/hero_1.jpg" alt="Image placeholder" class="img-fluid rounded mb-4">
-          <h3 class="font-weight-light  mb-0">Finding Your Perfect Shoes</h3>
+          <img src="../static/images/still-life-with-classic-shirts-hanger_23-2150828574.avif" alt="Image placeholder" class="img-fluid rounded mb-4">
+          <h3 class="font-weight-light  mb-0">Finding Your Perfect Dress</h3>
           <p>Promo from nuary 15 &mdash; 25, 2019</p>
         </a>
       </div>
