--- a/views/admin/updateProduct.ejs
+++ b/views/admin/updateProduct.ejs
@@ -4,14 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Add Product</title>
+  <title>Edit Product</title>
   <!-- Bootstrap CSS -->
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
   <div class="container mt-5">
-    <h2>Add Product</h2>
+    <h2>Edit Product</h2>
     <form action="/admin/updateProduct/<%= product._id %>" method="POST" enctype="application/x-www-form-urlencoded">
       <div class="form-group">
         <label for="name">Name:</label>
