--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -1,16 +1,18 @@
 <%- include ('header.ejs') %>
 
 
-  <div class="site-blocks-cover" style="background-image: url(../static/images/hero_1.jpg);" data-aos="fade">
+  <div class="site-blocks-cover"
+    style="background-image: url(../static/images/still-life-with-classic-shirts-hanger_23-2150828574.avif);"
+    data-aos="fade">
     <div class="container">
       <div class="row align-items-start align-items-md-center justify-content-end">
         <div class="col-md-5 text-center text-md-left pt-5 pt-md-0">
-          <h1 class="mb-2">Finding Your Perfect Shoes</h1>
+          <h1 class="mb-2">Finding Your Perfect Dress</h1>
           <div class="intro-text text-center text-md-left">
-            <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus at iaculis quam. Integer
-              accumsan tincidunt fringilla. </p>
+            <p class="mb-4">Discover the dress of your dreams with our expert guidance and wide selection. From elegant
+              shirts to trendy styles, we'll help you find the perfect dress for any occasion</p>
             <p>
-              <a href="#" class="btn btn-sm btn-primary">Shop Now</a>
+              <a href="/shop" class="btn btn-sm btn-primary">Shop Now</a>
             </p>
           </div>
         </div>
@@ -58,42 +60,32 @@
   <div class="site-section site-blocks-2">
     <div class="container">
       <div class="row">
-        <div class="col-sm-6 col-md-6 col-lg-4 mb-4 mb-lg-0" data-aos="fade" data-aos-delay="">
-          <a class="block-2-item" href="#">
-            <figure class="image">
-              <img src="../static/images/women.jpg" alt="" class="img-fluid">
-            </figure>
-            <div class="text">
-              <span class="text-uppercase">Collections</span>
-              <h3>Women</h3>
-            </div>
-          </a>
-        </div>
-        <div class="col-sm-6 col-md-6 col-lg-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="100">
-          <a class="block-2-item" href="#">
-            <figure class="image">
-              <img src="../static/images/children.jpg" alt="" class="img-fluid">
-            </figure>
-            <div class="text">
-              <span class="text-uppercase">Collections</span>
-              <h3>Children</h3>
-            </div>
-          </a>
-        </div>
-        <div class="col-sm-6 col-md-6 col-lg-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="200">
-          <a class="block-2-item" href="#">
-            <figure class="image">
-              <img src="../static/images/men.jpg" alt="" class="img-fluid">
-            </figure>
-            <div class="text">
-              <span class="text-uppercase">Collections</span>
-              <h3>Men</h3>
-            </div>
-          </a>
-        </div>
+        <% categories.filter(category=> category.status !== false).forEach(category => { %>
+          <% const categoryProduct=products.find(product=> product.category.toString() === category._id.toString()); %>
+            <% if (categoryProduct && categoryProduct.image.length> 0) { %>
+              <div class="col-sm-6 col-md-6 col-lg-4 mb-4 mb-lg-0" data-aos="fade" data-aos-delay="">
+                <a class="block-2-item" href="/shop?category=<%= category._id %>">
+                  <figure class="image">
+                    <img src="<%= categoryProduct.image[0] %>" alt="" class="img-fluid">
+                  </figure>
+                  <div class="text">
+                    <span class="text-uppercase">Collections</span>
+                    <h3>
+                      <%= category.name %>
+                    </h3>
+                  </div>
+                </a>
+              </div>
+              <% } else { %>
+                <div class="col-sm-6 col-md-6 col-lg-4 mb-4 mb-lg-0" style="height: 300px;"></div>
+                <% } %>
+                  <% }); %>
       </div>
     </div>
   </div>
+
+
+
 
   <div class="site-section block-3 site-blocks-2 bg-light">
     <div class="container">
@@ -105,71 +97,35 @@
       <div class="row">
         <div class="col-md-12">
           <div class="nonloop-block-3 owl-carousel">
-            <div class="item">
-              <div class="block-4 text-center">
-                <figure class="block-4-image">
-                  <img src="../static/images/cloth_1.jpg" alt="Image placeholder" class="img-fluid">
-                </figure>
-                <div class="block-4-text p-4">
-                  <h3><a href="#">Tank Top</a></h3>
-                  <p class="mb-0">Finding perfect t-shirt</p>
-                  <p class="text-primary font-weight-bold">$50</p>
+            <% products.forEach(product=> { %>
+              <div class="item">
+                <a href="/shopSingle/<%= product._id %>">
+                <div class="block-4 text-center">
+                  <figure class="block-4-image">
+                    <img src="<%= product.image[0] %>" alt="Image placeholder" class="img-fluid">
+                  </figure>
+                  <div class="block-4-text p-4">
+                    <h3><a href="/shopSingle/<%= product._id %>">
+                        <%= product.name %>
+                      </a></h3>
+                    <p class="mb-0">
+                      <%= product.description %>
+                    </p>
+                    <p class="text-primary font-weight-bold">$<%= product.price %>
+                    </p>
+                  </div>
                 </div>
+              </a>
               </div>
-            </div>
-            <div class="item">
-              <div class="block-4 text-center">
-                <figure class="block-4-image">
-                  <img src="../static/images/shoe_1.jpg" alt="Image placeholder" class="img-fluid">
-                </figure>
-                <div class="block-4-text p-4">
-                  <h3><a href="#">Corater</a></h3>
-                  <p class="mb-0">Finding perfect products</p>
-                  <p class="text-primary font-weight-bold">$50</p>
-                </div>
-              </div>
-            </div>
-            <div class="item">
-              <div class="block-4 text-center">
-                <figure class="block-4-image">
-                  <img src="../static/images/cloth_2.jpg" alt="Image placeholder" class="img-fluid">
-                </figure>
-                <div class="block-4-text p-4">
-                  <h3><a href="#">Polo Shirt</a></h3>
-                  <p class="mb-0">Finding perfect products</p>
-                  <p class="text-primary font-weight-bold">$50</p>
-                </div>
-              </div>
-            </div>
-            <div class="item">
-              <div class="block-4 text-center">
-                <figure class="block-4-image">
-                  <img src="../static/images/cloth_3.jpg" alt="Image placeholder" class="img-fluid">
-                </figure>
-                <div class="block-4-text p-4">
-                  <h3><a href="#">T-Shirt Mockup</a></h3>
-                  <p class="mb-0">Finding perfect products</p>
-                  <p class="text-primary font-weight-bold">$50</p>
-                </div>
-              </div>
-            </div>
-            <div class="item">
-              <div class="block-4 text-center">
-                <figure class="block-4-image">
-                  <img src="../static/images/shoe_1.jpg" alt="Image placeholder" class="img-fluid">
-                </figure>
-                <div class="block-4-text p-4">
-                  <h3><a href="#">Corater</a></h3>
-                  <p class="mb-0">Finding perfect products</p>
-                  <p class="text-primary font-weight-bold">$50</p>
-                </div>
-              </div>
-            </div>
+              <% }); %>
           </div>
         </div>
       </div>
     </div>
   </div>
+
+
+
 
   <div class="site-section block-8">
     <div class="container">
