--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -5,10 +5,12 @@
                 <a href="/admin/addProduct" class="btn btn-primary mb-3">Add Product</a>
             </div>
             <div class="col-lg-6">
-                <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Search..." id="searchInput">
-                    <button class="btn btn-outline-secondary" type="button" id="searchButton">Search</button>
-                </div>
+                <form id="searchForm" action="/admin/searchProduct" method="POST">
+                    <div class="input-group">
+                        <input type="text" class="form-control" placeholder="Search..." id="searchInput" name="search">
+                        <button class="btn btn-outline-secondary" type="submit">Search</button>
+                    </div>
+                </form>
             </div>
             <div class="col-lg-12">
                 <% if(productSuccess && productSuccess.length> 0) { %>
