--- a/views/admin/updateCategory.ejs
+++ b/views/admin/updateCategory.ejs
@@ -12,26 +12,60 @@
 <body>
   <div class="container mt-5">
     <h2>Edit Category</h2>
-    <form action="/admin/updateCategory/<%= category._id %>" method="POST" enctype="application/x-www-form-urlencoded">
+    <form id="editCategoryForm" action="/admin/updateCategory/<%= category._id %>" method="POST" enctype="application/x-www-form-urlencoded" onsubmit="return validateForm()">
       <div class="form-group">
         <label for="name">Name:</label>
         <input type="text" class="form-control" id="name" name="name" value="<%= category.name %>" required>
+        <div id="nameError" class="text-danger"></div>
       </div>
       <div class="form-group">
         <label for="description">Description:</label>
-        <textarea class="form-control" id="description" name="description"
-          required><%= category.description %></textarea>
+        <textarea class="form-control" id="description" name="description" required><%= category.description %></textarea>
+        <div id="descriptionError" class="text-danger"></div>
       </div>
+      <% if(catError){%>
+        <div style="color: red; font-size: 16px; font-weight: bold;">
+            <%= catError%>
+        </div>
+            <%}%>
       <button type="submit" class="btn btn-primary">Edit Category</button>
     </form>
   </div>
-
 
   <!-- Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
+  <script>
+    function validateForm() {
+      var name = document.getElementById('name').value;
+      var description = document.getElementById('description').value;
+      var nameError = document.getElementById('nameError');
+      var descriptionError = document.getElementById('descriptionError');
+
+      // Reset error messages
+      nameError.innerHTML = '';
+      descriptionError.innerHTML = '';
+
+      // Validate name
+      if (name.trim() === '') {
+        nameError.innerHTML = 'Name is required.';
+        return false;
+      } else if (/\d/.test(name)) {
+        nameError.innerHTML = 'Name must not contain numbers.';
+        return false;
+      }
+
+      // Validate description
+      if (description.trim() === '') {
+        descriptionError.innerHTML = 'Description is required.';
+        return false;
+      }
+
+      return true;
+    }
+  </script>
 </body>
 
 </html>
