--- a/views/admin/users.ejs
+++ b/views/admin/users.ejs
@@ -2,10 +2,12 @@
     <div class="container-fluid">
         <div class="row my-4">
             <div class="col-lg-6 offset-lg-6">
-                <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Search..." id="searchInput">
-                    <button class="btn btn-outline-secondary" type="button" id="searchButton">Search</button>
-                </div>
+                <form id="searchForm" action="/admin/search" method="POST">
+                    <div class="input-group">
+                        <input type="text" class="form-control" placeholder="Search..." id="searchInput" name="search">
+                        <button class="btn btn-outline-secondary" type="submit">Search</button>
+                    </div>
+                </form>
             </div>
             <div class="col-lg-12 mt-4">
                 <div class="table-responsive">
