--- a/views/user/footer.ejs
+++ b/views/user/footer.ejs
@@ -33,7 +33,8 @@
       <div class="col-md-6 col-lg-3 mb-4 mb-lg-0">
         <h3 class="footer-heading mb-4">Promo</h3>
         <a href="#" class="block-6">
-          <img src="../static/images/still-life-with-classic-shirts-hanger_23-2150828574.avif" alt="Image placeholder" class="img-fluid rounded mb-4">
+          <img src="../static/images/still-life-with-classic-shirts-hanger_23-2150828574.avif" alt="Image placeholder"
+            class="img-fluid rounded mb-4">
           <h3 class="font-weight-light  mb-0">Finding Your Perfect Dress</h3>
           <p>Promo from nuary 15 &mdash; 25, 2019</p>
         </a>
@@ -77,6 +78,25 @@
 </footer>
 </div>
 <script>
+  let currentSlide = 0;
+  const slides = document.querySelectorAll('.slide');
+
+  function showSlide(n) {
+    slides[currentSlide].classList.remove('active');
+    currentSlide = (n + slides.length) % slides.length;
+    slides[currentSlide].classList.add('active');
+  }
+
+  function prevSlide() {
+    showSlide(currentSlide - 1);
+  }
+
+  function nextSlide() {
+    showSlide(currentSlide + 1);
+  }
+
+
+
   function validateUsername() {
     var usernameError = document.getElementById('usernameerror');
     var username = document.getElementById('username').value;
@@ -133,10 +153,12 @@
 <script>
   const logout = document.getElementById('logoutMain')
 </script>
+
+<script src="../../static/js/magiczoom.js"></script>
 <script src="../static/js/jquery-3.3.1.min.js"></script>
-<script src="../static/js/jquery-ui.js"></script>
 <script src="../static/js/popper.min.js"></script>
 <script src="../static/js/bootstrap.min.js"></script>
+<script src="../static/js/jquery-ui.js"></script>
 <script src="../static/js/owl.carousel.min.js"></script>
 <script src="../static/js/jquery.magnific-popup.min.js"></script>
 <script src="../static/js/aos.js"></script>
