--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -10,7 +10,7 @@
           <h1 class="mb-2">Finding Your Perfect Dress</h1>
           <div class="intro-text text-center text-md-left">
             <p class="mb-4">Discover the dress of your dreams with our expert guidance and wide selection. From elegant
-              shirts to trendy styles, we'll help you find the perfect dress for any occasion</p>
+              shirts to trendy styles, we'll help you find the perfect dress for any occasion.</p>
             <p>
               <a href="/shop" class="btn btn-sm btn-primary">Shop Now</a>
             </p>
@@ -102,7 +102,7 @@
                 <a href="/shopSingle/<%= product._id %>">
                 <div class="block-4 text-center">
                   <figure class="block-4-image">
-                    <img src="<%= product.image[0] %>" alt="Image placeholder" class="img-fluid">
+                    <img src="/<%= product.image[0] %>" alt="Image placeholder" class="img-fluid">
                   </figure>
                   <div class="block-4-text p-4">
                     <h3><a href="/shopSingle/<%= product._id %>">
