--- a/views/user/shop-single.ejs
+++ b/views/user/shop-single.ejs
@@ -11,9 +11,20 @@
 <div class="site-section">
   <div class="container">
       <div class="row">
-          <div class="col-md-6">
-              <img src="<%= productOne.image[0] %>" alt="Image" class="img-fluid">
+        <div class="col-md-6">
+          <div id="productSlider" class="product-slider">
+            <% productOne.image.forEach((image, index) => { %>
+              <div class="slide <%= index === 0 ? 'active' : '' %>">
+                <a href="/<%= image %>" class="MagicZoom" id="Mag" style="width: 80%; height: auto;">
+                  <img src="/<%= image %>" alt="<%= productOne.name %> Image" class="img-fluid productImage" />
+              </a>              
+              </div>
+            <% }); %>
           </div>
+          <button class="prev verification-button" onclick="prevSlide()">Previous</button>
+          <button class="next verification-button" onclick="nextSlide()">Next</button>
+        </div>
+        
           <div class="col-md-6">
               <h2 class="text-black"><%= productOne.name %></h2>
               <p><%= productOne.description %></p>
@@ -54,8 +65,7 @@
                 <a href="/shopSingle/<%= product._id %>">
                   <div class="block-4 text-center">
                     <figure class="block-4-image">
-                      <img src="<%= product.image[0] %>" alt="Image placeholder" class="img-fluid">
-                      <p><%= product.image[0] %></p>
+                      <img src="/<%= product.image[0] %>" alt="Image placeholder" class="img-fluid">
                     </figure>
                     <div class="block-4-text p-4">
                       <h3><a href="/shopSingle/<%= product._id %>">
