--- a/views/user/shop.ejs
+++ b/views/user/shop.ejs
@@ -52,10 +52,10 @@
               <div class="col-sm-6 col-lg-4 mb-4" data-aos="fade-up">
                   <div class="block-4 text-center border">
                       <figure class="block-4-image imgsize">
-                          <a href="/shop-single/<%= product._id %>"><img src="<%= product.image[0] %>" alt="<%= product.name %>" class="img-fluid"></a>
+                          <a href="/shopSingle/<%= product._id %>"><img src="<%= product.image[0] %>" alt="<%= product.name %>" class="img-fluid"></a>
                       </figure>
                       <div class="block-4-text p-4 descript">
-                          <h3><a href="/shop-single/<%= product._id %>"><%= product.name %></a></h3>
+                          <h3><a href="/shopSingle/<%= product._id %>"><%= product.name %></a></h3>
                           <p class="mb-0"><%= product.description %></p>
                           <p class="text-primary font-weight-bold">$<%= product.price %></p>
                       </div>
