--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -111,7 +111,7 @@
                     <p class="mb-0">
                       <%= product.description %>
                     </p>
-                    <p class="text-primary font-weight-bold">$<%= product.price %>
+                    <p class="text-primary font-weight-bold">₹<%= product.price %>
                     </p>
                   </div>
                 </div>
