--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -10,75 +10,67 @@
 
   <div class="site-section">
     <div class="container">
-      <div class="row mb-5">
-        <form class="col-md-12" method="post">
-          <div class="site-blocks-table">
-            <table class="table table-bordered">
-              <thead>
-                <tr>
-                  <th class="product-thumbnail">Image</th>
-                  <th class="product-name">Product</th>
-                  <th class="product-price">Price</th>
-                  <th class="product-quantity">Quantity</th>
-                  <th class="product-total">Total</th>
-                  <th class="product-remove">Remove</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td class="product-thumbnail">
-                    <img src="../static/images/cloth_1.jpg" alt="Image" class="img-fluid">
-                  </td>
-                  <td class="product-name">
-                    <h2 class="h5 text-black">Top Up T-Shirt</h2>
-                  </td>
-                  <td>$49.00</td>
-                  <td>
-                    <div class="input-group mb-3" style="max-width: 120px;">
-                      <div class="input-group-prepend">
-                        <button class="btn btn-outline-primary js-btn-minus" type="button">&minus;</button>
-                      </div>
-                      <input type="text" class="form-control text-center" value="1" placeholder=""
-                        aria-label="Example text with button addon" aria-describedby="button-addon1">
-                      <div class="input-group-append">
-                        <button class="btn btn-outline-primary js-btn-plus" type="button">&plus;</button>
-                      </div>
-                    </div>
+        <div class="row mb-5">
+            <form class="col-md-12" method="post">
+                <% if (cart && cart.item && cart.item.length > 0) { %>
+                <div class="site-blocks-table">
+                    <table class="table table-bordered">
+                        <thead>
+                            <tr>
+                                <th class="product-thumbnail">Image</th>
+                                <th class="product-name">Product</th>
+                                <th class="product-thumbnail">Size</th>
+                                <th class="product-price">Price</th>
+                                <th class="product-quantity">Quantity</th>
+                                <th class="product-total">Total</th>
+                                <th class="product-remove">Remove</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <% cart.item.forEach((item, index) => { %>
+                            <tr>
+                                <td class="product-thumbnail">
+                                    <img src="<%= item.productId.image[0] %>" alt="Image" class="img-fluid">
+                                </td>
+                                <td class="product-name">
+                                    <h2 class="h5 text-black"><%= item.productId.name %></h2>
+                                </td>
+                                <td class="product-name">
+                                  <h2 class="h5 text-black"><%= item.size %></h2>
+                                </td>
+                                <td><%= item.productId.price %></td>
+                                <td>
+                                    <div class="input-group mb-3" style="max-width: 120px;">
+                                        <div class="input-group-prepend">
+                                            <button class="btn btn-outline-primary js-btn-minus"
+                                                type="button">&minus;</button>
+                                        </div>
+                                        <input type="text" class="form-control text-center"
+                                            value="<%= item.quantity %>" placeholder=""
+                                            aria-label="Example text with button addon"
+                                            aria-describedby="button-addon1">
+                                        <div class="input-group-append">
+                                            <button class="btn btn-outline-primary js-btn-plus"
+                                                type="button">&plus;</button>
+                                        </div>
+                                    </div>
+                                </td>
+                                <td>$<%= item.total %></td>
+                                <td><a href="#" class="btn btn-primary btn-sm">X</a></td>
+                            </tr>
+                            <% }) %>
+                        </tbody>
+                    </table>
+                </div>
+                <% } else { %>
+                <div class="alert">Your cart is empty.</div>
+                <% } %>
+            </form>
+        </div>
+    </div>
+</div>
 
-                  </td>
-                  <td>$49.00</td>
-                  <td><a href="#" class="btn btn-primary btn-sm">X</a></td>
-                </tr>
-
-                <tr>
-                  <td class="product-thumbnail">
-                    <img src="../static/images/cloth_2.jpg" alt="Image" class="img-fluid">
-                  </td>
-                  <td class="product-name">
-                    <h2 class="h5 text-black">Polo Shirt</h2>
-                  </td>
-                  <td>$49.00</td>
-                  <td>
-                    <div class="input-group mb-3" style="max-width: 120px;">
-                      <div class="input-group-prepend">
-                        <button class="btn btn-outline-primary js-btn-minus" type="button">&minus;</button>
-                      </div>
-                      <input type="text" class="form-control text-center" value="1" placeholder=""
-                        aria-label="Example text with button addon" aria-describedby="button-addon1">
-                      <div class="input-group-append">
-                        <button class="btn btn-outline-primary js-btn-plus" type="button">&plus;</button>
-                      </div>
-                    </div>
-
-                  </td>
-                  <td>$49.00</td>
-                  <td><a href="#" class="btn btn-primary btn-sm">X</a></td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-        </form>
-      </div>
+    
 
       <div class="row">
         <div class="col-md-6">
