--- a/views/user/shop.ejs
+++ b/views/user/shop.ejs
@@ -67,7 +67,7 @@
                     <p class="mb-0">
                       <%= product.description %>
                     </p>
-                    <p class="text-primary font-weight-bold">$<%= product.price %>
+                    <p class="text-primary font-weight-bold">₹<%= product.price %>
                     </p>
                   </div>
                 </div>
@@ -79,18 +79,19 @@
                 <div class="site-block-27">
                     <ul>
                         <% if (currentPage > 1) { %>
-                        <li><a href="?page=<%= currentPage - 1 %><%= sortBy ? '&sortBy=' + sortBy : '' %>">&lt;</a></li>
+                            <li><a href="?page=<%= currentPage - 1 %><%= sortBy ? '&sortBy=' + sortBy : '' %><%= categoryId ? '&category=' + categoryId : '' %>">&lt;</a></li>
                         <% } %>
                         <% for (let i = 1; i <= totalPages; i++) { %>
-                        <li <%= currentPage === i ? 'class="active"' : '' %>><a href="?page=<%= i %><%= sortBy ? '&sortBy=' + sortBy : '' %>"><%= i %></a></li>
+                            <li <%= currentPage === i ? 'class=active' : '' %>><a href="?page=<%= i %><%= sortBy ? '&sortBy=' + sortBy : '' %><%= categoryId ? '&category=' + categoryId : '' %>"><%= i %></a></li>
                         <% } %>
                         <% if (currentPage < totalPages) { %>
-                        <li><a href="?page=<%= currentPage + 1 %><%= sortBy ? '&sortBy=' + sortBy : '' %>">&gt;</a></li>
+                            <li><a href="?page=<%= currentPage + 1 %><%= sortBy ? '&sortBy=' + sortBy : '' %><%= categoryId ? '&category=' + categoryId : '' %>">&gt;</a></li>
                         <% } %>
                     </ul>
                 </div>
             </div>
         </div>
+        
         
         </div>
 
